--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start:dev": "nodemon index.js"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.42",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "socket.io": "^4.7.5"
   },
