--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "2.2.12",
+    "mongoose": "^8.6.3",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
